chamber/styles/base.css
body {
    font-size: 16px;
    line-height: 1.5;
    background-color: #4e4e4e;
}

header,
nav,
main,
footer {
    margin: 1.25rem auto;
    max-width: 900px;
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    color: #333333;
    /* background-color: #132947; */
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
}

header ul {
    list-style: none;
}

header div.header-phone-socials-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #333333;
    width: 100%;
}

.header-phone-socials-container section p {
    color: #ffffff;
    /* width: 80%;
    text-align: center; */
    font-size: 3vw;
}

.header-socials-subcontainer img {
    max-width: 5vw;
    margin: auto .5vw 2vw .5vw;
}

header div.header-title-nav-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    align-items: center;
    justify-items: center;
    background-color: #132947;
    width: 100%;
    min-height: 20vw;
}

.header-title-nav-container img {
    margin-left: 3vw;
    max-width: 25vw;
    object-fit: contain;
}

.header-title-nav-container h1 {
    grid-column: 2/5;
    margin-left: 3vw;
    font-size: max(4vw, 12px);
    line-height: 1.25;
    background-color: transparent;
}

.header-title-nav-container button {
    grid-column: 6/7;
    border: none;
    font-size: 6vw;
    background-color: transparent;
    color: #f9fafa;
}

nav {
    width: 100%;
    /* height: 100%; */
    margin: 0 auto;
    background-color: #132947;
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
}

nav ul {
    display: none;
}

nav ul.open {
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    border: .5px solid #d0d4da;
    color: #f9fafa;
    background-color: #42546c;
    width: 100%;
}

nav ul li a {
    display: block;
    margin: 0;
    padding: 2vw;
    text-align: center;
}

nav a:link,
nav a:visited {
    color: #ffffff;
}

header .header-currentdate-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #333333;
    width: 100%;
}

header .header-currentdate-container p {
    color: #ffffff;
    /* font-size: 3.5vw; */
    margin: 1vw;
}

h1 {
    color: #ffffff;
    background-color: #333333;
    /* font-size: 30px; */
    font-size: min(7vw, 30px);
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
}

h2 {
    color: #fcba03;
    background-color: #234577;
    /* font-size: 25px; */
    font-size: min(6vw, 25px);
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
}

h3 {
    color: #000000;
    /* font-size: 20px; */
    font-size: min(5vw, 20px);
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
}

p {
    color: #333333;
    /* font-size: 16px; */
    font-size: min(4vw, 16px);
    font-family: 'Cabin', sans-serif;
    font-weight: normal;
}

a:link,
a:visited {
    text-decoration: none;
}

a:hover,
a:active {
    text-decoration: underline;
}

main {
    display: flex;
    flex-direction: column;
}

main div {
    display: flexbox;
    flex-direction: column;
    margin: 1vw;
    border: 1px solid white;
    background-color: gray;
}

main div p {
    color: #ffffff;
    margin: 2vw;
    height: 25vw;
}

main div .company-card {
    padding: 2vw;
    margin: 2vw;
    border: 1px solid #ffffff;
    height: 25vw;
}

main div .company-card.company-3 {
    display: none;
}

footer,
footer p,
footer div p {
    color: #ffffff;
    background-color: #132947;
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* padding: 3vw; */
    /* width: 100%; */
}

footer a:link,
footer a:visited {
    color: #ffffff;
}

footer img {
    margin: 5vw auto 2vw auto;
    max-width: 6rem;
    object-fit: contain;
}

footer div.contact-info-container {
    margin: auto auto 2vw auto;
}

footer div.contact-info-container * {
    padding: 0;
    margin: 0;
}

footer div.contact-info-container h2 {
    color: #ffffff;
    background-color: transparent;
    font-size: min(5vw, 20px);
    font-weight: 700;
}

footer div p.footer-contact-info.phone {
    margin: 2.5vw auto 2vw auto;
    text-align: center;
}

footer div p.footer-contact-info.map {
    margin: 2vw auto 2.5vw auto;
    text-align: center;
}

footer div.footer-divider {
    margin: 2vw auto;
    border-bottom: 1px solid rgba(255,255,255,.5);
    width: 80%;
}

footer p.fineprint {
    grid-column: 1/6;
    grid-row: 3/4;
    margin: 2vw 2vw;
    text-align: center;
}

footer p.date-last-modified {
    grid-column: 1/6;
    grid-row: 4/5;
    margin: 2vw 2vw 5vw 2vw;
    text-align: center;
}

